--- a/agenda/static/css/styles.css
+++ b/agenda/static/css/styles.css
@@ -59,10 +59,10 @@ section {
 }
 
 footer {
-    background-color: #0d6efd;
-    /* Azul primário */
-    color: #fff;
-    padding: 20px 0;
+    background-color: #d6e1f0;
+    color: #000000;
+    padding-top: 5px;
+    padding-bottom: 0px;
 }
 
 /* Ajustes para dispositivos móveis */
